# discernus

./: .ai_search_exclusions  .cursorignore  .cursorrules  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .pylintrc  AGENTS.md  AGENT_HANDOFF_CONTEXT.md  AGENT_QUICK_START.md  ALPHA_RELEASE_STATUS.md  ALPHA_RELEASE_v2.0.0-alpha.1.md  API_COST_PROTECTION_GUIDE.md  BACKGROUND_EXECUTOR_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEAN_ORCHESTRATOR_MISSING_FEATURES.md  COMMERCIAL_LICENSE_TEMPLATE.md  CONTEXT_HANDOFF_THIN_MODEL_HEALTH.md  CONTRIBUTING.md  COPYING  CRITICAL_BUG_REPORT.md  CURSOR_AGENT_QUICK_START.md  DATABASE_FIRST_ARCHITECTURE.md  DCS_METRICS_INTEGRATION_COMPLETE.md  DCS_METRICS_SYSTEM_COMPLETED.md  DEPENDENCY_CLEANUP_PLAN.md  DESIGN_SYSTEM_ORGANIZATION.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DEV_ENVIRONMENT.md  DEV_MODE_GUIDE.md  DUAL_LICENSING.md  Dockerfile  ENVIRONMENT_TROUBLESHOOTING.md  FRAMEWORK_ARCHITECTURE.md  (+269 more)
.chainlit/: config.toml
.claude/: settings.local.json
.cursor/: rules  settings.json
.files/: .cursorrules
.github/: pull_request_template.md
.obsidian/: workspace.json
1_docs/: README.md
2_pm/: Discernus_Comprehensive_Review_Package.md
alembic/: env.py
analysis/: model_comparison.md  visual_comparison.md
analysis_results/: ENHANCED_REPORTS_INDEX.md  custom_analysis_civic_virtue.json  custom_analysis_political_spectrum.json
api_integration_upload/: SOURCE_CODE_SUMMARY.md  UPLOAD_GUIDE.md  generate_prompt.txt
archive/: COMPREHENSIVE_PROJECT_DOCUMENTATION.md  RENAME_LOG.md
branding/: discernus_coordinates_renaming_guide.md  discernus_rebranding_guide.md
code_workspace/: conversation_20250703_172713_2c380555_execution_log.jsonl  conversation_20250703_174138_21c67fb0_execution_log.jsonl
config/: dipoles.json  framework.json  framework_config.json
conversations/: conversation_20250703_181046_0145b53b.jsonl  conversation_20250703_181606_e299483a.jsonl  conversation_20250703_182033_d3c675d2.jsonl  conversation_20250703_224134_83d40683.jsonl  conversation_20250703_224829_05646b7b.jsonl  conversation_20250703_225948_689c6811.jsonl  conversation_20250703_225948_689c6811_readable.md  conversation_20250703_234244_2f18715a.jsonl  conversation_20250703_235229_6abbe1da.jsonl  conversation_20250703_235559_352f2ccf.jsonl  conversation_20250704_000328_ae28d688.jsonl  conversation_20250704_081824_7523f538.jsonl  conversation_20250704_105209_8fc845fc.jsonl  conversation_20250704_105344_bf544e39.jsonl  conversation_20250704_201202_0be9cc5c.jsonl  conversation_20250704_201630_bc335595.jsonl  conversation_20250705_172508_5ff0163e.jsonl  conversation_20250705_172614_17fa9024.jsonl  test_conversation.jsonl
deprecated/: .cursorignore  README.md  terminology_aliases.py
dev_instructions/: Additional cursor instructions.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  Deliverables for Cursor ER Diagram, Alembic Migrations, and Versioned JSON Schemas.md  Initial Cursor Ticket List & Project Scaffold.md  Input Package for Cursor.md  Milestone 1 Epics - Narrative Gravity Model.md  Narrative Gravity Model Epic 1 Corpus & Job Management Backend.md  Project Milestones - Narrative Gravity Model.md  Security Guidelines for Cursor.md  User Personas - Narrative Gravity Model.md  VALIDATION_FIRST_DEVELOPMENT_STRATEGY.md  VALIDATION_IMPLEMENTATION_ROADMAP.md
discernus/: README.md  __init__.py  __main__.py  analyze_conversation_timing.py  cli.py  cli_clean.py  cli_console.py  complete_conversation_test.py  dev_test_runner.py  end_to_end_test.py  jupyter_magic.py  mvp_test.py  requirements.txt  setup_vertex_ai.py  simple_cli.py  simple_test.py
discernus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: AGENT_BRIEFING.md  AGENT_DESIGN_PRINCIPLES.md  AI_AGENT_GITHUB_GUIDE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CLI_RESUME_COMMAND.md  CODE_ORGANIZATION_STANDARDS.md  CONTRIBUTING.md  CORE_INFRASTRUCTURE_GUIDE.md  CURSOR_AGENT_ENVIRONMENT_GUIDE.md  DEV_MODE_GUIDE.md  DISCERNUSLIBRARIAN_EXECUTION_GUIDE.md  DISCERNUS_METHODOLOGY.md  DOCUMENTATION_FUTURES.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_REFACTORING_PLAN.md  ENHANCED_ORCHESTRATION_GUIDE.md  EXISTING_SYSTEMS_INVENTORY.md  EXTENSION_DEVELOPMENT_GUIDE.md  FRAMEWORK_INTEGRATION_GUIDE.md  GITHUB_ISSUES_SETUP.md  GIT_BEST_PRACTICES.md  GLOSSARY.md  GOVERNANCE_PRINCIPLES.md  INSTALLATION_GUIDE.md  LAUNCH_GUIDE.md  PLATFORM_ARCHITECTURE_OVERVIEW.md  PROJECT_STATUS.md  PROVENANCE_QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  RESEARCH_PROVENANCE_GUIDE.md  RESEARCH_PROVENANCE_GUIDE_V3.md  SCRIPTS_CLEANUP_SUMMARY_JUNE_2025.md  SYSTEM_UPGRADE_2025.md  TESTING_STRATEGY.md  THIN_ARCHITECTURE_REFERENCE.md  THIN_COMPLIANCE_CHECKLIST.md  THIN_EXPERIMENT_LIFECYCLE_ARCHITECTURE.md  TROUBLESHOOTING_GUIDE.md  (+6 more)
docs_site/: README.md  mkdocs.yml
examples/: combined_corpus.jsonl  component_matrix_example.yaml  constitution_excerpt.txt  corpus_generation_demo.py  from_csv.jsonl  from_markdown.jsonl  from_text.jsonl  fukuyama_framework_demo.py  generated_schema.json  natural_jupyter_demo.py  sample_documents.csv  sample_speech.md  stage5_to_stage6_demo.py
experiment_reports/: README.md  iditi_validation_config.yaml  iditi_validation_study.yaml  iditi_validation_study_report.html
experiments/: CLEANUP_COMPLETION_SUMMARY.md  DATABASE_CLEANUP_COMPLETION_SUMMARY.md  ENHANCED_ORCHESTRATION_ORGANIZATION_FIX.md  EXPERIMENT_ORGANIZATION_GUIDE.md  EXPERIMENT_ORGANIZATION_SUMMARY.md  example_enhanced_orchestration.json  iditi_small_validation.json  mft_validation_experiment.json
extensions/: README.md  data_aggregation.yaml
frameworks/: DO-NOT-DELETE-SPECS.md
frontend/: DEBUG_SYSTEM.md  package-lock.json  stability-check.cjs  test-debug-output.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
futures/: PUBLIC_AI_ASSISTANT_CONCEPT.md  advanced_research_ecosystem.md
gauntlet_results/: README.md
logs/: api_costs.json  discernus_stats.db  monitoring_state.json  variance_threshold_analysis.json
migrations/: alembic.ini  env.py
(+5703 files in other folders)
