[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discernus"
version = "2.0.0"
description = "Discernus THIN v2.0 Research Platform"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Discernus Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core platform dependencies
    "python-dotenv>=0.19.0",
    "gitpython>=3.1.0", 
    "litellm>=1.7",
    "requests>=2.28.0",
    "click>=8.0",
    "rich>=13.0",
    "loguru>=0.7",
    "ratelimit>=2.2",
    
    # Data processing and analysis
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pingouin>=0.5",
    "statsmodels>=0.14",
    
    # Configuration and serialization
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Search and indexing
    "txtai>=5.0.0",
    "typesense>=0.20.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "black",
    "isort",
    "flake8",
]

# Corpus collection and data gathering tools
corpus = [
    "youtube-transcript-api>=0.6.2",  # YouTube transcript extraction
    "yt-dlp>=2025.6.9",               # Video downloading
]

# Analysis and visualization tools  
analysis = [
    "jupyter>=1.0.0",                 # Notebook environment
    "nbformat>=5.7.0",                # Notebook format support
    "plotly>=5.14.0",                 # Interactive visualizations
    "scikit-learn>=1.2.0",            # Machine learning
]

# Natural language processing tools
nlp = [
    "nltk>=3.8",                      # Natural language toolkit
    "textblob>=0.15.3",               # Text processing
]

# Cloud provider SDKs (when not using LiteLLM abstraction)
cloud = [
    "anthropic>=0.7.0",               # Anthropic Claude SDK
    "google-cloud-aiplatform>=1.104.0", # Google Vertex AI
    "google-auth>=2.40.0",            # Google authentication
]

[project.urls]
Homepage = "https://github.com/discernus/discernus"
Repository = "https://github.com/discernus/discernus.git"
Issues = "https://github.com/discernus/discernus/issues"

[project.scripts]
discernus = "discernus.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["discernus*"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["discernus/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"] 
python_functions = ["test_*"]
addopts = "-v" 